# Lumine

./: .env.example  .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.py
contracts/: payment-verifier.clar
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: demo.ts
frontend/src/components/: Comparison.tsx  Console.tsx  DemoRun.tsx  Future.tsx  Hero.tsx  OnChain.tsx  Problem.tsx  Section.tsx  Solution.tsx
frontend/src/components/demo-run/: DemoRunPage.tsx
frontend/src/components/demo-run/src/components/: ExitSection.tsx
frontend/src/pages/: Docs.tsx
frontend/src/styles/: globals.css
src/: __init__.py
src/agent/: __init__.py  agent.py  stacks_wallet.py
src/api/: __init__.py  demo.py  main.py  txid_store.py
src/verification/: __init__.py  config.py  transaction_verifier.py  wallet_generator.py
tests/: __init__.py  test_agent.py  test_api.py  test_verification.py
usdcx-bridge/: helper.js  index.js  package.json  pnpm-lock.yaml  stacks-signer.js
